# RuralHealthEnv

./: Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
env/: environment.py  models.py  nlp_utils.py  patient_generator.py  progression.py  reward.py  state.py  utils.py
env/graders/: base.py  grader_easy.py  grader_hard.py  grader_medium.py
env/tasks/: base.py  task_easy.py  task_hard.py  task_medium.py
server/: app.py
tests/: test_conversational.py  test_env.py
